--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CRM</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
+    <script src="js/einstein.js" defer></script>
 </head>
 <body>
     <div class="modal__win">
