--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
-    <script src="js/einstein.js" defer></script>
+    <!-- <script src="js/main.js" defer></script>
+    <script src="js/einstein.js" defer></script> -->
+    <script src="js/tasks.js"></script>
+    <!-- <script src="js/tasksHard_1.js"></script> -->
+    <!-- <script src="js/tasksHard_2.js"></script> -->
+
 </head>
 <body>
     <div class="modal__win">
