--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- <script src="js/main.js" defer></script>
     <script src="js/einstein.js" defer></script> -->
-    <script src="js/tasks.js"></script>
-    <!-- <script src="js/tasksHard_1.js"></script> -->
-    <!-- <script src="js/tasksHard_2.js"></script> -->
+    <!-- <script src="js/tasks.js"></script> -->
+    <script src="js/tasksHard_1.js"></script>
+    <script src="js/tasksHard_2.js"></script>
 
 </head>
 <body>
