--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- <script src="js/main.js" defer></script>
     <script src="js/einstein.js" defer></script> -->
-    <script src="js/tasks.js"></script>
-    <!-- <script src="js/tasksHard_1.js"></script> -->
-    <!-- <script src="js/tasksHard_2.js"></script> -->
+    <!-- <script src="js/tasks.js"></script>
+    <script src="js/tasksHard_1.js"></script> 
+    <script src="js/tasksHard_2.js"></script> -->
+    <script src="js/Task02.js" defer></script>
+    <script src="js/Task01.js" defer></script>
+    <script src="js/Task03.js" defer></script>
+    <script src="js/Task04.js" defer></script>
+    <script src="js/hard_task_01.js" defer></script>
+    <script src="js/hard_task_02.js" defer></script>
 
 </head>
 <body>
