--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
     <!-- <script src="js/tasks.js"></script>
     <script src="js/tasksHard_1.js"></script> 
     <script src="js/tasksHard_2.js"></script> -->
-    <script src="js/Task02.js" defer></script>
+    <!-- <script src="js/Task02.js" defer></script>
     <script src="js/Task01.js" defer></script>
     <script src="js/Task03.js" defer></script>
     <script src="js/Task04.js" defer></script>
     <script src="js/hard_task_01.js" defer></script>
-    <script src="js/hard_task_02.js" defer></script>
+    <script src="js/hard_task_02.js" defer></script> -->
 
 </head>
 <body>
+    <div class="win__error">
+        <div class="modal__win-close">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
+                <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
+                </svg>
+        </div>
+        <div class="win__error-img"></div>
+        <p class="win__error-text">что-то пошло не так</p>
+    </div>
     <div class="modal__win">
         <div class="modal__win-close">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,5 +89,6 @@
         </form>
 
     </div>
+
 </body>
 </html>
