--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!-- <script src="js/Task01.js" defer></script> -->
     <!-- <script src="js/Task02.js" defer></script> -->
-    <script src="js/Task03.js" defer></script>
+    <!-- <script src="js/Task03.js" defer></script> -->
+    <script src="js/game.js" defer></script>
+
 
 </head>
 <body>
