--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>CRM</title>
   <link rel="stylesheet" href="css/crm.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/cart.js"></script>
   </head>
 <body>
 <div class="content">
